--- a/task-1.html
+++ b/task-1.html
@@ -5,8 +5,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+  </style>
   <title>Task 1</title>
   <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/task-1.css" />
 </head>
 
 <body>
@@ -16,31 +24,31 @@
     <li class="item">
       <h2>Animals</h2>
 
-      <ul>
-        <li>Cat</li>
-        <li>Hamster</li>
-        <li>Horse</li>
-        <li>Parrot</li>
+      <ul class="category-list">
+        <li class="category-item">Cat</li>
+        <li class="category-item">Hamster</li>
+        <li class="category-item">Horse</li>
+        <li class="category-item">Parrot</li>
       </ul>
     </li>
     <li class="item">
       <h2>Products</h2>
 
-      <ul>
-        <li>Bread</li>
-        <li>Prasley</li>
-        <li>Cheese</li>
+      <ul class="category-list">
+        <li class="category-item">Bread</li>
+        <li class="category-item">Parsley</li>
+        <li class="category-item">Cheese</li>
       </ul>
     </li>
     <li class="item">
       <h2>Technologies</h2>
 
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>React</li>
-        <li>Node.js</li>
+      <ul class="category-list">
+        <li class="category-item">HTML</li>
+        <li class="category-item">CSS</li>
+        <li class="category-item">JavaScript</li>
+        <li class="category-item">React</li>
+        <li class="category-item">Node.js</li>
       </ul>
     </li>
   </ul>
