--- a/task-4.html
+++ b/task-4.html
@@ -5,8 +5,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+  </style>
   <title>Task 4</title>
   <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/task-4.css" />
 </head>
 
 <body>
@@ -21,7 +29,7 @@
       Password
       <input type="password" name="password" />
     </label>
-    <button type="submit">Login</button>
+    <button type="submit">Log in</button>
   </form>
 
   <script src="./js/task-4.js" type="module"></script>
