--- a/task-4.html
+++ b/task-4.html
@@ -23,11 +23,11 @@
   <form class="login-form">
     <label>
       Email
-      <input type="email" name="email" />
+      <input type="email" name="email" placeholder="Type area" />
     </label>
     <label>
       Password
-      <input type="password" name="password" />
+      <input type="password" name="password" placeholder="Type area" />
     </label>
     <button type="submit">Log in</button>
   </form>
